--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
+    "url-parse": "^1.1.9",
     "xmlhttprequest": "^1.8.0"
   }
 }
