--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.3",
+    "morgan": "^1.9.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "url-parse": "^1.1.9",
