--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
