--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
+    "vue-i18n": "^7.4.2",
     "vue-resource": "^1.4.0",
     "vue-round-filter": "^1.1.2",
     "vue-router": "^3.0.1",
