--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "firebase": "^4.10.1",
     "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "vue": "^2.5.2",
-    "vue-awesome": "^2.3.4",
     "vue-i18n": "^7.4.2",
     "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
-    "vue-slick": "^1.1.12",
-    "vuetify": "^1.0.3"
+    "vue-slick": "^1.1.12"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
