--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-i18n": "^7.4.2",
     "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
-    "vue-slick": "^1.1.12"
+    "vue-slick": "^1.1.12",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
