--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
+    "vue-awesome": "^2.3.4",
     "vue-i18n": "^7.4.2",
     "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
