--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
-    "vue-i18n": "^7.4.2",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.12",
     "vuex": "^3.0.1"
@@ -63,6 +62,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "string-replace-webpack-plugin": "^0.1.3",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
