--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.12",
     "vuefire": "^1.4.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "express": "^4.16.3",
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -46,7 +47,6 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
