--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue-slick": "^1.1.12",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
-    "express": "^4.16.3",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
