--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "postinstall": "npm run build",
+    "server": "node server.js"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
