--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "compression": "^1.7.2",
     "cookie": "^0.3.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
