--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "express": "^4.16.3",
     "firebase": "^4.11.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
+    "raven-js": "^3.23.3",
     "vue": "^2.5.15",
     "vue-awesome": "^2.3.4",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.12",
     "vuefire": "^1.4.5",
-    "vuex": "^3.0.1",
-    "express": "^4.16.3"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
