--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "firebase": "^4.11.0",
     "jquery": "^3.3.1",
+    "morgan": "^1.9.0",
     "popper.js": "^1.12.9",
     "raven-js": "^3.23.3",
     "vue": "^2.5.15",
