--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.9.0",
     "popper.js": "^1.12.9",
     "raven-js": "^3.23.3",
+    "url-parse": "^1.2.0",
     "vue": "^2.5.15",
     "vue-awesome": "^2.3.4",
     "vue-router": "^3.0.1",
