--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "es6-promise-promise": "^1.0.0",
     "express": "^4.16.3",
     "firebase": "^4.11.0",
     "jquery": "^3.3.1",
