--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url-parse": "^1.2.0",
     "vue": "^2.5.15",
     "vue-awesome": "^2.3.4",
+    "vue-in-viewport-mixin": "^1.0.3",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.12",
     "vuefire": "^1.4.5",
