--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "es6-promise-promise": "^1.0.0",
     "express": "^4.16.3",
     "firebase": "^4.11.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "popper.js": "^1.12.9",
