--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^2.5.15",
     "vue-awesome": "^2.3.4",
     "vue-in-viewport-mixin": "^1.0.3",
+    "vue-lazyload": "^1.2.4",
     "vue-linkify": "^1.0.1",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.12",
