--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "server": "node server.js",
-    "build_prod": "bash build/build_prod.sh"
+    "build_prod": "bash build/build_prod.sh",
+    "generate_nav": "node build/generate_nav.js"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
